@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
  * Copyright (c) 2017 SAP SE. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
@@ -25,8 +25,8 @@
 /**
  * @test
  * @summary Regression test based on runtime/Metaspace/DefineClass.java
- * @compile --enable-preview -source ${jdk.version} RedefineClass.java
- * @run main/othervm --enable-preview -Djdk.attach.allowAttachSelf RedefineClass
+ * @compile RedefineClass.java
+ * @run main/othervm -Djdk.attach.allowAttachSelf RedefineClass
  */
 
 import java.io.ByteArrayOutputStream;
@@ -120,7 +120,7 @@ public class RedefineClass {
 
     private static int getStringIndex(String needle, byte[] buf, int offset) {
         outer:
-        for (int i = offset; i < buf.length - offset - needle.length(); i++) {
+        for (int i = offset; i <= buf.length - needle.length(); i++) {
             for (int j = 0; j < needle.length(); j++) {
                 if (buf[i + j] != (byte)needle.charAt(j)) continue outer;
             }
