@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -38,13 +38,13 @@ import java.io.*;
  *     SetBreakpoint().
  * COMMENTS
  *
- * @requires vm.continuations
+ * @requires test.thread.factory == null
  * @library /test/lib
  *
  * @comment make sure breakpoint01 is compiled with full debug info
  * @clean breakpoint01
- * @compile --enable-preview -source ${jdk.version} -g:lines,source,vars breakpoint01.java
- * @run main/othervm/native --enable-preview -agentlib:breakpoint01 breakpoint01
+ * @compile -g:lines,source,vars breakpoint01.java
+ * @run main/othervm/native -agentlib:breakpoint01 breakpoint01
  */
 
 
@@ -57,14 +57,7 @@ import java.io.*;
  */
 public class breakpoint01 {
     static {
-        try {
-            System.loadLibrary("breakpoint01");
-        } catch (UnsatisfiedLinkError ule) {
-            System.err.println("Could not load \"breakpoint01\" library");
-            System.err.println("java.library.path:"
-                + System.getProperty("java.library.path"));
-            throw ule;
-        }
+        System.loadLibrary("breakpoint01");
     }
 
     native int check();
