@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,9 +23,7 @@
 
 /*
  * @test
- * @enablePreview
- * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
- * @run testng/othervm --enable-native-access=ALL-UNNAMED StdLibTest
+ * @run junit/othervm/timeout=600 --enable-native-access=ALL-UNNAMED StdLibTest
  */
 
 import java.lang.invoke.MethodHandle;
@@ -41,77 +39,85 @@ import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 import java.lang.foreign.*;
 
-import org.testng.annotations.*;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
-import static org.testng.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
-@Test
-public class StdLibTest extends NativeTestHelper {
+final class StdLibTest extends NativeTestHelper {
 
-    final static Linker abi = Linker.nativeLinker();
+    static final Linker ABI = Linker.nativeLinker();
 
-    private StdLibHelper stdLibHelper = new StdLibHelper();
+    static final StdLibHelper STD_LIB_HELPER = new StdLibHelper();
 
-    @Test(dataProvider = "stringPairs")
+    @ParameterizedTest
+    @MethodSource("stringPairs")
     void test_strcat(String s1, String s2) throws Throwable {
-        assertEquals(stdLibHelper.strcat(s1, s2), s1 + s2);
+        assertEquals(s1 + s2, STD_LIB_HELPER.strcat(s1, s2));
     }
 
-    @Test(dataProvider = "stringPairs")
+    @ParameterizedTest
+    @MethodSource("stringPairs")
     void test_strcmp(String s1, String s2) throws Throwable {
-        assertEquals(Math.signum(stdLibHelper.strcmp(s1, s2)), Math.signum(s1.compareTo(s2)));
+        assertEquals(Math.signum(s1.compareTo(s2)), Math.signum(STD_LIB_HELPER.strcmp(s1, s2)));
     }
 
-    @Test(dataProvider = "strings")
+    @ParameterizedTest
+    @MethodSource("strings")
     void test_puts(String s) throws Throwable {
-        assertTrue(stdLibHelper.puts(s) >= 0);
+        assertTrue(STD_LIB_HELPER.puts(s) >= 0);
     }
 
-    @Test(dataProvider = "strings")
+    @ParameterizedTest
+    @MethodSource("strings")
     void test_strlen(String s) throws Throwable {
-        assertEquals(stdLibHelper.strlen(s), s.length());
+        assertEquals(STD_LIB_HELPER.strlen(s), s.length());
     }
 
-    @Test(dataProvider = "instants")
+    @ParameterizedTest
+    @MethodSource("instants")
     void test_time(Instant instant) throws Throwable {
-        StdLibHelper.Tm tm = stdLibHelper.gmtime(instant.getEpochSecond());
+        StdLibHelper.Tm tm = STD_LIB_HELPER.gmtime(instant.getEpochSecond());
         LocalDateTime localTime = LocalDateTime.ofInstant(instant, ZoneOffset.UTC);
-        assertEquals(tm.sec(), localTime.getSecond());
-        assertEquals(tm.min(), localTime.getMinute());
-        assertEquals(tm.hour(), localTime.getHour());
+        assertEquals(localTime.getSecond(), tm.sec());
+        assertEquals(localTime.getMinute(), tm.min());
+        assertEquals(localTime.getHour(), tm.hour());
         //day pf year in Java has 1-offset
-        assertEquals(tm.yday(), localTime.getDayOfYear() - 1);
-        assertEquals(tm.mday(), localTime.getDayOfMonth());
+        assertEquals(localTime.getDayOfYear() - 1, tm.yday());
+        assertEquals(localTime.getDayOfMonth(), tm.mday());
         //days of week starts from Sunday in C, but on Monday in Java, also account for 1-offset
-        assertEquals((tm.wday() + 6) % 7, localTime.getDayOfWeek().getValue() - 1);
+        assertEquals(localTime.getDayOfWeek().getValue() - 1,  (tm.wday() + 6) % 7);
         //month in Java has 1-offset
-        assertEquals(tm.mon(), localTime.getMonth().getValue() - 1);
-        assertEquals(tm.isdst(), ZoneOffset.UTC.getRules()
-                .isDaylightSavings(Instant.ofEpochMilli(instant.getEpochSecond() * 1000)));
+        assertEquals(localTime.getMonth().getValue() - 1, tm.mon());
+        assertEquals(ZoneOffset.UTC.getRules()
+                .isDaylightSavings(Instant.ofEpochMilli(instant.getEpochSecond() * 1000)), tm.isdst());
     }
 
-    @Test(dataProvider = "ints")
+    @ParameterizedTest
+    @MethodSource("ints")
     void test_qsort(List<Integer> ints) throws Throwable {
         if (ints.size() > 0) {
             int[] input = ints.stream().mapToInt(i -> i).toArray();
-            int[] sorted = stdLibHelper.qsort(input);
+            int[] sorted = STD_LIB_HELPER.qsort(input);
             Arrays.sort(input);
-            assertEquals(sorted, input);
+            assertArrayEquals(input, sorted);
         }
     }
 
     @Test
     void test_rand() throws Throwable {
-        int val = stdLibHelper.rand();
+        int val = STD_LIB_HELPER.rand();
         for (int i = 0 ; i < 100 ; i++) {
-            int newVal = stdLibHelper.rand();
+            int newVal = STD_LIB_HELPER.rand();
             if (newVal != val) {
                 return; //ok
             }
@@ -120,69 +126,64 @@ public class StdLibTest extends NativeTestHelper {
         fail("All values are the same! " + val);
     }
 
-    @Test(dataProvider = "printfArgs")
+    @ParameterizedTest
+    @MethodSource("printfArgs")
     void test_printf(List<PrintfArg> args) throws Throwable {
-        String formatArgs = args.stream()
-                .map(a -> a.format)
+        String javaFormatArgs = args.stream()
+                .map(a -> a.javaFormat)
+                .collect(Collectors.joining(","));
+        String nativeFormatArgs = args.stream()
+                .map(a -> a.nativeFormat)
                 .collect(Collectors.joining(","));
 
-        String formatString = "hello(" + formatArgs + ")\n";
+        String javaFormatString = "hello(" + javaFormatArgs + ")\n";
+        String nativeFormatString = "hello(" + nativeFormatArgs + ")\n";
 
-        String expected = String.format(formatString, args.stream()
+        String expected = String.format(javaFormatString, args.stream()
                 .map(a -> a.javaValue).toArray());
 
-        int found = stdLibHelper.printf(formatString, args);
-        assertEquals(found, expected.length());
+        int found = STD_LIB_HELPER.printf(nativeFormatString, args);
+        assertEquals(expected.length(), found);
     }
 
-    @Test(dataProvider = "printfArgs")
-    void test_vprintf(List<PrintfArg> args) throws Throwable {
-        String formatArgs = args.stream()
-                .map(a -> a.format)
-                .collect(Collectors.joining(","));
-
-        String formatString = "hello(" + formatArgs + ")\n";
-
-        String expected = String.format(formatString, args.stream()
-                .map(a -> a.javaValue).toArray());
-
-        int found = stdLibHelper.vprintf(formatString, args);
-        assertEquals(found, expected.length());
+    @Test
+    void testSystemLibraryBadLookupName() {
+        assertTrue(LINKER.defaultLookup().find("strlen\u0000foobar").isEmpty());
     }
 
-    static class StdLibHelper {
+    static final class StdLibHelper {
 
-        final static MethodHandle strcat = abi.downcallHandle(abi.defaultLookup().lookup("strcat").get(),
-                FunctionDescriptor.of(C_POINTER, C_POINTER, C_POINTER))
-                .asType(MethodType.methodType(MemoryAddress.class, MemorySegment.class, MemorySegment.class)); // exact signature match
+        final static MethodHandle strcat = ABI.downcallHandle(ABI.defaultLookup().findOrThrow("strcat"),
+                FunctionDescriptor.of(C_POINTER, C_POINTER, C_POINTER));
 
-
-        final static MethodHandle strcmp = abi.downcallHandle(abi.defaultLookup().lookup("strcmp").get(),
+        final static MethodHandle strcmp = ABI.downcallHandle(ABI.defaultLookup().findOrThrow("strcmp"),
                 FunctionDescriptor.of(C_INT, C_POINTER, C_POINTER));
 
-        final static MethodHandle puts = abi.downcallHandle(abi.defaultLookup().lookup("puts").get(),
+        final static MethodHandle puts = ABI.downcallHandle(ABI.defaultLookup().findOrThrow("puts"),
                 FunctionDescriptor.of(C_INT, C_POINTER));
 
-        final static MethodHandle strlen = abi.downcallHandle(abi.defaultLookup().lookup("strlen").get(),
+        final static MethodHandle strlen = ABI.downcallHandle(ABI.defaultLookup().findOrThrow("strlen"),
                 FunctionDescriptor.of(C_INT, C_POINTER));
 
-        final static MethodHandle gmtime = abi.downcallHandle(abi.defaultLookup().lookup("gmtime").get(),
-                FunctionDescriptor.of(C_POINTER, C_POINTER));
+        final static MethodHandle gmtime = ABI.downcallHandle(ABI.defaultLookup().findOrThrow("gmtime"),
+                FunctionDescriptor.of(C_POINTER.withTargetLayout(Tm.LAYOUT), C_POINTER));
 
-        final static MethodHandle qsort = abi.downcallHandle(abi.defaultLookup().lookup("qsort").get(),
-                FunctionDescriptor.ofVoid(C_POINTER, C_LONG_LONG, C_LONG_LONG, C_POINTER));
+        // void qsort( void *ptr, size_t count, size_t size, int (*comp)(const void *, const void *) );
+        final static MethodHandle qsort = ABI.downcallHandle(ABI.defaultLookup().findOrThrow("qsort"),
+                FunctionDescriptor.ofVoid(C_POINTER, C_SIZE_T, C_SIZE_T, C_POINTER));
 
-        final static FunctionDescriptor qsortComparFunction = FunctionDescriptor.of(C_INT, C_POINTER, C_POINTER);
+        final static FunctionDescriptor qsortComparFunction = FunctionDescriptor.of(C_INT,
+                C_POINTER.withTargetLayout(C_INT), C_POINTER.withTargetLayout(C_INT));
 
         final static MethodHandle qsortCompar;
 
-        final static MethodHandle rand = abi.downcallHandle(abi.defaultLookup().lookup("rand").get(),
+        final static MethodHandle rand = ABI.downcallHandle(ABI.defaultLookup().findOrThrow("rand"),
                 FunctionDescriptor.of(C_INT));
 
-        final static MethodHandle vprintf = abi.downcallHandle(abi.defaultLookup().lookup("vprintf").get(),
+        final static MethodHandle vprintf = ABI.downcallHandle(ABI.defaultLookup().findOrThrow("vprintf"),
                 FunctionDescriptor.of(C_INT, C_POINTER, C_POINTER));
 
-        final static Addressable printfAddr = abi.defaultLookup().lookup("printf").get();
+        final static MemorySegment printfAddr = ABI.defaultLookup().findOrThrow("printf");
 
         final static FunctionDescriptor printfBase = FunctionDescriptor.of(C_INT, C_POINTER);
 
@@ -190,60 +191,71 @@ public class StdLibTest extends NativeTestHelper {
             try {
                 //qsort upcall handle
                 qsortCompar = MethodHandles.lookup().findStatic(StdLibTest.StdLibHelper.class, "qsortCompare",
-                        Linker.upcallType(qsortComparFunction));
+                        qsortComparFunction.toMethodType());
             } catch (ReflectiveOperationException ex) {
                 throw new IllegalStateException(ex);
             }
         }
 
         String strcat(String s1, String s2) throws Throwable {
-            try (MemorySession session = MemorySession.openConfined()) {
-                MemorySegment buf = session.allocate(s1.length() + s2.length() + 1);
-                buf.setUtf8String(0, s1);
-                MemorySegment other = session.allocateUtf8String(s2);
-                return ((MemoryAddress)strcat.invokeExact(buf, other)).getUtf8String(0);
+            try (var arena = Arena.ofConfined()) {
+                MemorySegment buf = arena.allocate(s1.length() + s2.length() + 1);
+                buf.setString(0, s1);
+                MemorySegment other = arena.allocateFrom(s2);
+                return ((MemorySegment)strcat.invokeExact(buf, other)).getString(0);
             }
         }
 
         int strcmp(String s1, String s2) throws Throwable {
-            try (MemorySession session = MemorySession.openConfined()) {
-                MemorySegment ns1 = session.allocateUtf8String(s1);
-                MemorySegment ns2 = session.allocateUtf8String(s2);
-                return (int)strcmp.invoke(ns1, ns2);
+            try (var arena = Arena.ofConfined()) {
+                MemorySegment ns1 = arena.allocateFrom(s1);
+                MemorySegment ns2 = arena.allocateFrom(s2);
+                return (int)strcmp.invokeExact(ns1, ns2);
             }
         }
 
         int puts(String msg) throws Throwable {
-            try (MemorySession session = MemorySession.openConfined()) {
-                MemorySegment s = session.allocateUtf8String(msg);
-                return (int)puts.invoke(s);
+            try (var arena = Arena.ofConfined()) {
+                MemorySegment s = arena.allocateFrom(msg);
+                return (int)puts.invokeExact(s);
             }
         }
 
         int strlen(String msg) throws Throwable {
-            try (MemorySession session = MemorySession.openConfined()) {
-                MemorySegment s = session.allocateUtf8String(msg);
-                return (int)strlen.invoke(s);
+            try (var arena = Arena.ofConfined()) {
+                MemorySegment s = arena.allocateFrom(msg);
+                return (int)strlen.invokeExact(s);
             }
         }
 
         Tm gmtime(long arg) throws Throwable {
-            try (MemorySession session = MemorySession.openConfined()) {
-                MemorySegment time = session.allocate(8);
+            try (var arena = Arena.ofConfined()) {
+                MemorySegment time = arena.allocate(8);
                 time.set(C_LONG_LONG, 0, arg);
-                return new Tm((MemoryAddress)gmtime.invoke(time));
+                return new Tm((MemorySegment)gmtime.invokeExact(time));
             }
         }
 
-        static class Tm {
+        static final class Tm {
 
             //Tm pointer should never be freed directly, as it points to shared memory
             private final MemorySegment base;
 
-            static final long SIZE = 56;
+            static final MemoryLayout LAYOUT = MemoryLayout.structLayout(
+                    C_INT.withName("sec"),
+                    C_INT.withName("min"),
+                    C_INT.withName("hour"),
+                    C_INT.withName("mday"),
+                    C_INT.withName("mon"),
+                    C_INT.withName("year"),
+                    C_INT.withName("wday"),
+                    C_INT.withName("yday"),
+                    C_BOOL.withName("isdst"),
+                    MemoryLayout.paddingLayout(3)
+            );
 
-            Tm(MemoryAddress addr) {
-                this.base = MemorySegment.ofAddress(addr, SIZE, MemorySession.global());
+            Tm(MemorySegment addr) {
+                this.base = addr;
             }
 
             int sec() {
@@ -277,22 +289,26 @@ public class StdLibTest extends NativeTestHelper {
 
         int[] qsort(int[] arr) throws Throwable {
             //init native array
-            try (MemorySession session = MemorySession.openConfined()) {
-                MemorySegment nativeArr = session.allocateArray(C_INT, arr);
+            try (var arena = Arena.ofConfined()) {
+                MemorySegment nativeArr = arena.allocateFrom(C_INT, arr);
 
                 //call qsort
-                Addressable qsortUpcallStub = abi.upcallStub(qsortCompar, qsortComparFunction, session);
+                MemorySegment qsortUpcallStub = ABI.upcallStub(qsortCompar, qsortComparFunction, arena);
 
-                qsort.invoke(nativeArr, (long)arr.length, C_INT.byteSize(), qsortUpcallStub);
+                // both of these fit in an int
+                // automatically widen them to long on x64
+                int count = arr.length;
+                int size = (int) C_INT.byteSize();
+                qsort.invoke(nativeArr, count, size, qsortUpcallStub);
 
                 //convert back to Java array
                 return nativeArr.toArray(C_INT);
             }
         }
 
-        static int qsortCompare(MemoryAddress addr1, MemoryAddress addr2) {
+        static int qsortCompare(MemorySegment addr1, MemorySegment addr2) {
             return addr1.get(C_INT, 0) -
-                   addr2.get(C_INT, 0);
+                    addr2.get(C_INT, 0);
         }
 
         int rand() throws Throwable {
@@ -300,79 +316,62 @@ public class StdLibTest extends NativeTestHelper {
         }
 
         int printf(String format, List<PrintfArg> args) throws Throwable {
-            try (MemorySession session = MemorySession.openConfined()) {
-                MemorySegment formatStr = session.allocateUtf8String(format);
-                return (int)specializedPrintf(args).invoke(formatStr,
-                        args.stream().map(a -> a.nativeValue(session)).toArray());
-            }
-        }
-
-        int vprintf(String format, List<PrintfArg> args) throws Throwable {
-            try (MemorySession session = MemorySession.openConfined()) {
-                MemorySegment formatStr = session.allocateUtf8String(format);
-                VaList vaList = VaList.make(b -> args.forEach(a -> a.accept(b, session)), session);
-                return (int)vprintf.invoke(formatStr, vaList);
+            try (var arena = Arena.ofConfined()) {
+                MemorySegment formatStr = arena.allocateFrom(format);
+                return (int)specializedPrintf(args).invokeExact(formatStr,
+                        args.stream().map(a -> a.nativeValue(arena)).toArray());
             }
         }
 
         private MethodHandle specializedPrintf(List<PrintfArg> args) {
             //method type
-            MethodType mt = MethodType.methodType(int.class, MemoryAddress.class);
+            MethodType mt = MethodType.methodType(int.class, MemorySegment.class);
             FunctionDescriptor fd = printfBase;
             List<MemoryLayout> variadicLayouts = new ArrayList<>(args.size());
             for (PrintfArg arg : args) {
                 mt = mt.appendParameterTypes(arg.carrier);
                 variadicLayouts.add(arg.layout);
             }
-            MethodHandle mh = abi.downcallHandle(printfAddr,
-                    fd.asVariadic(variadicLayouts.toArray(new MemoryLayout[args.size()])));
+            Linker.Option varargIndex = Linker.Option.firstVariadicArg(fd.argumentLayouts().size());
+            MethodHandle mh = ABI.downcallHandle(printfAddr,
+                    fd.appendArgumentLayouts(variadicLayouts.toArray(new MemoryLayout[args.size()])),
+                    varargIndex);
             return mh.asSpreader(1, Object[].class, args.size());
         }
     }
 
     /*** data providers ***/
 
-    @DataProvider
-    public static Object[][] ints() {
+    static Stream<Arguments> ints() {
         return perms(0, new Integer[] { 0, 1, 2, 3, 4 }).stream()
-                .map(l -> new Object[] { l })
-                .toArray(Object[][]::new);
+                .map(Arguments::of);
     }
 
-    @DataProvider
-    public static Object[][] strings() {
+    static Stream<Arguments> strings() {
+        return strings0()
+                .map(Arguments::of);
+    }
+
+    static Stream<Arguments> stringPairs() {
+        return strings0()
+                .flatMap(s -> strings0()
+                        .map(s2 -> Arguments.of(s, s2)));
+    }
+
+    static Stream<String> strings0() {
         return perms(0, new String[] { "a", "b", "c" }).stream()
-                .map(l -> new Object[] { String.join("", l) })
-                .toArray(Object[][]::new);
+                .map(l -> String.join("", l));
     }
 
-    @DataProvider
-    public static Object[][] stringPairs() {
-        Object[][] strings = strings();
-        Object[][] stringPairs = new Object[strings.length * strings.length][];
-        int pos = 0;
-        for (Object[] s1 : strings) {
-            for (Object[] s2 : strings) {
-                stringPairs[pos++] = new Object[] { s1[0], s2[0] };
-            }
-        }
-        return stringPairs;
-    }
-
-    @DataProvider
-    public static Object[][] instants() {
+    static Stream<Arguments> instants() {
         Instant start = ZonedDateTime.of(LocalDateTime.parse("2017-01-01T00:00:00"), ZoneOffset.UTC).toInstant();
         Instant end = ZonedDateTime.of(LocalDateTime.parse("2017-12-31T00:00:00"), ZoneOffset.UTC).toInstant();
-        Object[][] instants = new Object[100][];
-        for (int i = 0 ; i < instants.length ; i++) {
-            Instant instant = start.plusSeconds((long)(Math.random() * (end.getEpochSecond() - start.getEpochSecond())));
-            instants[i] = new Object[] { instant };
-        }
-        return instants;
+        return IntStream.range(0, 100)
+                .mapToObj(i -> start.plusSeconds((long)(Math.random() * (end.getEpochSecond() - start.getEpochSecond()))))
+                .map(Arguments::of);
     }
 
-    @DataProvider
-    public static Object[][] printfArgs() {
+    static Stream<Arguments> printfArgs() {
         ArrayList<List<PrintfArg>> res = new ArrayList<>();
         List<List<PrintfArg>> perms = new ArrayList<>(perms(0, PrintfArg.values()));
         for (int i = 0 ; i < 100 ; i++) {
@@ -380,50 +379,34 @@ public class StdLibTest extends NativeTestHelper {
             res.addAll(perms);
         }
         return res.stream()
-                .map(l -> new Object[] { l })
-                .toArray(Object[][]::new);
+                .map(Arguments::of);
     }
 
-    enum PrintfArg implements BiConsumer<VaList.Builder, MemorySession> {
-
-        INTEGRAL(int.class, C_INT, "%d", session -> 42, 42, VaList.Builder::addVarg),
-        STRING(MemoryAddress.class, C_POINTER, "%s", session -> {
-            var segment = MemorySegment.allocateNative(4, session);
-            segment.setUtf8String(0, "str");
-            return segment.address();
-        }, "str", VaList.Builder::addVarg),
-        CHAR(byte.class, C_CHAR, "%c", session -> (byte) 'h', 'h', (builder, layout, value) -> builder.addVarg(C_INT, (int)value)),
-        DOUBLE(double.class, C_DOUBLE, "%.4f", session ->1.2345d, 1.2345d, VaList.Builder::addVarg);
+    enum PrintfArg {
+        INT(int.class, C_INT, "%d", "%d", arena -> 42, 42),
+        LONG(long.class, C_LONG_LONG, "%lld", "%d", arena -> 84L, 84L),
+        DOUBLE(double.class, C_DOUBLE, "%.4f", "%.4f", arena -> 1.2345d, 1.2345d),
+        STRING(MemorySegment.class, C_POINTER, "%s", "%s", arena -> arena.allocateFrom("str"), "str");
 
         final Class<?> carrier;
         final ValueLayout layout;
-        final String format;
-        final Function<MemorySession, ?> nativeValueFactory;
+        final String nativeFormat;
+        final String javaFormat;
+        final Function<Arena, ?> nativeValueFactory;
         final Object javaValue;
-        @SuppressWarnings("rawtypes")
-        final VaListBuilderCall builderCall;
 
-        <Z, L extends ValueLayout> PrintfArg(Class<?> carrier, L layout, String format, Function<MemorySession, Z> nativeValueFactory, Object javaValue, VaListBuilderCall<Z, L> builderCall) {
+        <Z, L extends ValueLayout> PrintfArg(Class<?> carrier, L layout, String nativeFormat, String javaFormat,
+                                             Function<Arena, Z> nativeValueFactory, Object javaValue) {
             this.carrier = carrier;
             this.layout = layout;
-            this.format = format;
+            this.nativeFormat = nativeFormat;
+            this.javaFormat = javaFormat;
             this.nativeValueFactory = nativeValueFactory;
             this.javaValue = javaValue;
-            this.builderCall = builderCall;
         }
 
-        @Override
-        @SuppressWarnings("unchecked")
-        public void accept(VaList.Builder builder, MemorySession session) {
-            builderCall.build(builder, layout, nativeValueFactory.apply(session));
-        }
-
-        interface VaListBuilderCall<V, L> {
-            void build(VaList.Builder builder, L layout, V value);
-        }
-
-        public Object nativeValue(MemorySession session) {
-            return nativeValueFactory.apply(session);
+        public Object nativeValue(Arena arena) {
+            return nativeValueFactory.apply(arena);
         }
     }
 
