@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,35 +23,33 @@
 
 /*
  * @test
- * @enablePreview
  * @modules java.base/jdk.internal.access.foreign
+ * @modules java.base/jdk.internal.foreign.layout
  *
- * @run testng/othervm -Xverify:all
+ * @run junit/othervm -Xverify:all
  *   -Djdk.internal.foreign.SHOULD_ADAPT_HANDLES=false
  *   VarHandleTestExact
- * @run testng/othervm -Xverify:all
+ * @run junit/othervm -Xverify:all
  *   -Djdk.internal.foreign.SHOULD_ADAPT_HANDLES=false
  *   -Djava.lang.invoke.VarHandle.VAR_HANDLE_GUARDS=true
  *   -Djava.lang.invoke.VarHandle.VAR_HANDLE_IDENTITY_ADAPT=true
  *   VarHandleTestExact
- * @run testng/othervm -Xverify:all
+ * @run junit/othervm -Xverify:all
  *   -Djdk.internal.foreign.SHOULD_ADAPT_HANDLES=false
  *   -Djava.lang.invoke.VarHandle.VAR_HANDLE_GUARDS=false
  *   -Djava.lang.invoke.VarHandle.VAR_HANDLE_IDENTITY_ADAPT=false
  *   VarHandleTestExact
- * @run testng/othervm -Xverify:all
+ * @run junit/othervm -Xverify:all
  *   -Djdk.internal.foreign.SHOULD_ADAPT_HANDLES=false
  *   -Djava.lang.invoke.VarHandle.VAR_HANDLE_GUARDS=false
  *   -Djava.lang.invoke.VarHandle.VAR_HANDLE_IDENTITY_ADAPT=true
  *   VarHandleTestExact
  */
 
-import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
-import org.testng.SkipException;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
+
+import jdk.internal.foreign.layout.ValueLayouts;
 
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.VarHandle;
@@ -63,8 +61,13 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Consumer;
 
-import static org.testng.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
+import org.junit.jupiter.api.Assumptions;
+import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
+@TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public class VarHandleTestExact {
 
     private static class Widget {
@@ -89,22 +92,24 @@ public class VarHandleTestExact {
         final Long aLongField_RO = 1234L;
     }
 
-    @Test(dataProvider = "dataObjectAccess")
+    @ParameterizedTest
+    @MethodSource("dataObjectAccess")
     public void testExactSet(String fieldBaseName, Class<?> fieldType, boolean ro, Object testValue,
                              SetX setter, GetX getter,
                              SetStaticX staticSetter, GetStaticX staticGetter)
             throws NoSuchFieldException, IllegalAccessException {
-        if (ro) throw new SkipException("Can not test setter with read only field");
+        Assumptions.assumeFalse(ro, "Can not test setter with read only field");
         VarHandle vh = MethodHandles.lookup().findVarHandle(Widget.class, fieldBaseName + "_RW", fieldType);
         Widget w = new Widget();
 
         doTest(vh,
             tvh -> tvh.set(w, testValue),
             tvh -> setter.set(tvh, w, testValue),
-            ".*\\Qexpected (Widget," + fieldType.getSimpleName() + ")void \\E.*");
+            ".*\\Qhandle's method type (Widget," + fieldType.getSimpleName() + ")void \\E.*");
     }
 
-    @Test(dataProvider = "dataObjectAccess")
+    @ParameterizedTest
+    @MethodSource("dataObjectAccess")
     public void testExactGet(String fieldBaseName, Class<?> fieldType, boolean ro, Object testValue,
                              SetX setter, GetX getter,
                              SetStaticX staticSetter, GetStaticX staticGetter)
@@ -115,24 +120,26 @@ public class VarHandleTestExact {
         doTest(vh,
             tvh -> tvh.get(w),
             tvh -> getter.get(tvh, w),
-            ".*\\Qexpected (Widget)" + fieldType.getSimpleName() + " \\E.*");
+            ".*\\Qhandle's method type (Widget)" + fieldType.getSimpleName() + " \\E.*");
     }
 
-    @Test(dataProvider = "dataObjectAccess")
+    @ParameterizedTest
+    @MethodSource("dataObjectAccess")
     public void testExactSetStatic(String fieldBaseName, Class<?> fieldType, boolean ro, Object testValue,
                                    SetX setter, GetX getter,
                                    SetStaticX staticSetter, GetStaticX staticGetter)
             throws NoSuchFieldException, IllegalAccessException {
-        if (ro) throw new SkipException("Can not test setter with read only field");
+        Assumptions.assumeFalse(ro, "Can not test setter with read only field");
         VarHandle vh = MethodHandles.lookup().findStaticVarHandle(Widget.class, fieldBaseName + "_SRW", fieldType);
 
         doTest(vh,
             tvh -> tvh.set(testValue),
             tvh -> staticSetter.set(tvh, testValue),
-            ".*\\Qexpected (" + fieldType.getSimpleName() + ")void \\E.*");
+            ".*\\Qhandle's method type (" + fieldType.getSimpleName() + ")void \\E.*");
     }
 
-    @Test(dataProvider = "dataObjectAccess")
+    @ParameterizedTest
+    @MethodSource("dataObjectAccess")
     public void testExactGetStatic(String fieldBaseName, Class<?> fieldType, boolean ro, Object testValue,
                                    SetX setter, GetX getter,
                                    SetStaticX staticSetter, GetStaticX staticGetter)
@@ -142,10 +149,11 @@ public class VarHandleTestExact {
         doTest(vh,
             tvh -> tvh.get(),
             tvh -> staticGetter.get(tvh),
-            ".*\\Qexpected ()" + fieldType.getSimpleName() + " \\E.*");
+            ".*\\Qhandle's method type ()" + fieldType.getSimpleName() + " \\E.*");
     }
 
-    @Test(dataProvider = "dataSetArray")
+    @ParameterizedTest
+    @MethodSource("dataSetArray")
     public void testExactArraySet(Class<?> arrayClass, Object testValue, SetArrayX setter) {
         VarHandle vh = MethodHandles.arrayElementVarHandle(arrayClass);
         Object arr = Array.newInstance(arrayClass.componentType(), 1);
@@ -153,10 +161,11 @@ public class VarHandleTestExact {
         doTest(vh,
             tvh -> tvh.set(arr, 0, testValue),
             tvh -> setter.set(tvh, arr, testValue),
-            ".*\\Qexpected (" + arrayClass.getSimpleName() + ",int," + arrayClass.componentType().getSimpleName() + ")void \\E.*");
+            ".*\\Qhandle's method type (" + arrayClass.getSimpleName() + ",int," + arrayClass.componentType().getSimpleName() + ")void \\E.*");
     }
 
-    @Test(dataProvider = "dataSetBuffer")
+    @ParameterizedTest
+    @MethodSource("dataSetBuffer")
     public void testExactBufferSet(Class<?> arrayClass, Object testValue, SetBufferX setter) {
         VarHandle vh = MethodHandles.byteBufferViewVarHandle(arrayClass, ByteOrder.nativeOrder());
         ByteBuffer buff = ByteBuffer.allocateDirect(8);
@@ -164,18 +173,19 @@ public class VarHandleTestExact {
         doTest(vh,
             tvh -> tvh.set(buff, 0, testValue),
             tvh -> setter.set(tvh, buff, testValue),
-            ".*\\Qexpected (ByteBuffer,int," + arrayClass.componentType().getSimpleName() + ")void \\E.*");
+            ".*\\Qhandle's method type (ByteBuffer,int," + arrayClass.componentType().getSimpleName() + ")void \\E.*");
     }
 
-    @Test(dataProvider = "dataSetMemorySegment")
+    @ParameterizedTest
+    @MethodSource("dataSetMemorySegment")
     public void testExactSegmentSet(Class<?> carrier, Object testValue, SetSegmentX setter) {
-        VarHandle vh = MethodHandles.memorySegmentViewVarHandle(MemoryLayout.valueLayout(carrier, ByteOrder.nativeOrder()));
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment seg = MemorySegment.allocateNative(8, session);
+        VarHandle vh = ValueLayouts.valueLayout(carrier, ByteOrder.nativeOrder()).varHandle();
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment seg = arena.allocate(8);
             doTest(vh,
                 tvh -> tvh.set(seg, 0L, testValue),
                 tvh -> setter.set(tvh, seg, 0L, testValue),
-                ".*\\Qexpected (MemorySegment,long," + carrier.getSimpleName() + ")void \\E.*");
+                ".*\\Qhandle's method type (MemorySegment,long," + carrier.getSimpleName() + ")void \\E.*");
         }
     }
 
@@ -264,7 +274,6 @@ public class VarHandleTestExact {
         cases.add(new Object[] { carrier, testValue, setter });
     }
 
-    @DataProvider
     public static Object[][] dataObjectAccess() {
         List<Object[]> cases = new ArrayList<>();
 
@@ -333,7 +342,6 @@ public class VarHandleTestExact {
         return cases.toArray(Object[][]::new);
     }
 
-    @DataProvider
     public static Object[][] dataSetArray() {
         List<Object[]> cases = new ArrayList<>();
 
@@ -354,7 +362,6 @@ public class VarHandleTestExact {
         return cases.toArray(Object[][]::new);
     }
 
-    @DataProvider
     public static Object[][] dataSetBuffer() {
         List<Object[]> cases = new ArrayList<>();
 
@@ -372,7 +379,6 @@ public class VarHandleTestExact {
         return cases.toArray(Object[][]::new);
     }
 
-    @DataProvider
     public static Object[][] dataSetMemorySegment() {
         List<Object[]> cases = new ArrayList<>();
 
