@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,38 +23,46 @@
 
 /*
  * @test
- * @bug 8023524
- * @summary tests logging generated classes for lambda
+ * @bug 8023524 8304846
+ * @requires vm.flagless
+ * @library /test/lib/
  * @library /java/nio/file
  * @modules jdk.compiler
  *          jdk.zipfs
- * @run testng LogGeneratedClassesTest
+ * @run junit LogGeneratedClassesTest
+ * @summary tests logging generated classes for lambda
  */
-import java.io.File;
 import java.io.IOException;
+import java.nio.charset.Charset;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Predicate;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.nio.file.FileStore;
 import java.nio.file.attribute.PosixFileAttributeView;
 
-import org.testng.annotations.AfterClass;
-import org.testng.annotations.BeforeClass;
-import org.testng.annotations.Test;
-import org.testng.SkipException;
+import jdk.test.lib.compiler.CompilerUtils;
+import jdk.test.lib.process.OutputAnalyzer;
 
 import static java.nio.file.attribute.PosixFilePermissions.*;
-import static org.testng.Assert.assertEquals;
-import static org.testng.Assert.assertFalse;
-import static org.testng.Assert.assertTrue;
+import static jdk.test.lib.process.ProcessTools.*;
+import org.junit.jupiter.api.AfterAll;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import org.junit.jupiter.api.Assumptions;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
-public class LogGeneratedClassesTest extends LUtils {
-    String longFQCN;
+public class LogGeneratedClassesTest {
+    static final Path DUMP_LAMBDA_PROXY_CLASS_FILES = Path.of("DUMP_LAMBDA_PROXY_CLASS_FILES");
+    static final Path CLASSES = Path.of("classes").toAbsolutePath();
+    static String longFQCN;
 
-    @BeforeClass
-    public void setup() throws IOException {
+    @BeforeAll
+    public static void setup() throws IOException {
         final List<String> scratch = new ArrayList<>();
         scratch.clear();
         scratch.add("package com.example;");
@@ -63,7 +71,6 @@ public class LogGeneratedClassesTest extends LUtils {
         scratch.add("        int foo();");
         scratch.add("    }");
         scratch.add("    public static void main(String[] args) {");
-        scratch.add("        System.setSecurityManager(new SecurityManager());");
         scratch.add("        I lam = () -> 10;");
         scratch.add("        Runnable r = () -> {");
         scratch.add("            System.out.println(\"Runnable\");");
@@ -73,9 +80,8 @@ public class LogGeneratedClassesTest extends LUtils {
         scratch.add("    }");
         scratch.add("}");
 
-        File test = new File("TestLambda.java");
-        createFile(test, scratch);
-        compile("-d", ".", test.getName());
+        Path testLambda = Path.of("TestLambda.java");
+        Files.write(testLambda, scratch, Charset.defaultCharset());
 
         scratch.remove(0);
         scratch.remove(0);
@@ -90,84 +96,85 @@ public class LogGeneratedClassesTest extends LUtils {
         sb.append(";");
         sb.insert(0, "package ");
         scratch.add(0, sb.toString());
-        test = new File("LongPackageName.java");
-        createFile(test, scratch);
-        compile("-d", ".", test.getName());
+        Path lpnTest = Path.of("LongPackageName.java");
+        Files.write(lpnTest, scratch, Charset.defaultCharset());
 
-        // create target
-        Files.createDirectory(Paths.get("dump"));
-        Files.createDirectories(Paths.get("dumpLong/com/example/nonsense"));
-        Files.createFile(Paths.get("dumpLong/com/example/nonsense/nonsense"));
-        Files.createFile(Paths.get("file"));
+        CompilerUtils.compile(Path.of("."), CLASSES);
     }
 
-    @AfterClass
-    public void cleanup() throws IOException {
+    @AfterAll
+    public static void cleanup() throws IOException {
         Files.delete(Paths.get("TestLambda.java"));
         Files.delete(Paths.get("LongPackageName.java"));
-        Files.delete(Paths.get("file"));
-        TestUtil.removeAll(Paths.get("com"));
+        TestUtil.removeAll(DUMP_LAMBDA_PROXY_CLASS_FILES);
+        TestUtil.removeAll(Paths.get("notDir"));
         TestUtil.removeAll(Paths.get("dump"));
         TestUtil.removeAll(Paths.get("dumpLong"));
     }
 
     @Test
-    public void testNotLogging() {
-        TestResult tr = doExec(JAVA_CMD.getAbsolutePath(),
-                               "-cp", ".",
-                               "-Djava.security.manager=allow",
+    public void testNotLogging() throws Exception {
+        ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
+                               "-cp", CLASSES.toString(),
                                "com.example.TestLambda");
-        tr.assertZero("Should still return 0");
+        executeProcess(pb).shouldHaveExitValue(0);
     }
 
     @Test
-    public void testLogging() throws IOException {
-        assertTrue(Files.exists(Paths.get("dump")));
-        TestResult tr = doExec(JAVA_CMD.getAbsolutePath(),
-                               "-cp", ".",
-                               "-Djava.security.manager=allow",
-                               "-Djdk.internal.lambda.dumpProxyClasses=dump",
-                               "com.example.TestLambda");
+    public void testLogging() throws Exception {
+        Path testDir = Path.of("dump");
+        Path dumpDir = testDir.resolve(DUMP_LAMBDA_PROXY_CLASS_FILES);
+        Files.createDirectory(testDir);
+        ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
+                               "-cp", CLASSES.toString(),
+                               "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
+                               "com.example.TestLambda").directory(testDir.toFile());
+        executeProcess(pb).shouldHaveExitValue(0);
+
         // 2 our own class files. We don't care about the others
-        assertEquals(Files.find(
-                        Paths.get("dump"),
-                        99,
-                        (p, a) -> p.startsWith(Paths.get("dump/com/example"))
-                                && a.isRegularFile()).count(),
-                2, "Two lambda captured");
-        tr.assertZero("Should still return 0");
+        assertEquals(2, Files.find(
+                dumpDir,
+                99,
+                (p, a) -> p.startsWith(dumpDir.resolve("com/example"))
+                        && a.isRegularFile()).count(), "Two lambda captured");
     }
 
     @Test
-    public void testDumpDirNotExist() throws IOException {
-        assertFalse(Files.exists(Paths.get("notExist")));
-        TestResult tr = doExec(JAVA_CMD.getAbsolutePath(),
-                               "-cp", ".",
-                               "-Djava.security.manager=allow",
-                               "-Djdk.internal.lambda.dumpProxyClasses=notExist",
-                               "com.example.TestLambda");
-        assertEquals(tr.testOutput.stream()
-                                  .filter(s -> s.startsWith("WARNING"))
-                                  .filter(s -> s.contains("does not exist"))
-                                  .count(),
-                     1, "only show error once");
-        tr.assertZero("Should still return 0");
+    public void testDumpDirNotExist() throws Exception {
+        Path testDir = Path.of("NotExist");
+        Path dumpDir = testDir.resolve(DUMP_LAMBDA_PROXY_CLASS_FILES);
+        Files.createDirectory(testDir);
+        TestUtil.removeAll(dumpDir);
+        assertFalse(Files.exists(dumpDir));
+
+        ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
+                                "-cp", CLASSES.toString(),
+                                "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
+                                "com.example.TestLambda").directory(testDir.toFile());
+        executeProcess(pb).shouldHaveExitValue(0);
+
+        // The dump directory will be created if not exist
+        assertEquals(2, Files.find(
+                dumpDir,
+                99,
+                (p, a) -> p.startsWith(dumpDir.resolve("com/example"))
+                        && a.isRegularFile()).count(), "Two lambda captured");
     }
 
     @Test
-    public void testDumpDirIsFile() throws IOException {
-        assertTrue(Files.isRegularFile(Paths.get("file")));
-        TestResult tr = doExec(JAVA_CMD.getAbsolutePath(),
-                               "-cp", ".",
-                               "-Djava.security.manager=allow",
-                               "-Djdk.internal.lambda.dumpProxyClasses=file",
-                               "com.example.TestLambda");
-        assertEquals(tr.testOutput.stream()
-                                  .filter(s -> s.startsWith("WARNING"))
-                                  .filter(s -> s.contains("not a directory"))
-                                  .count(),
-                     1, "only show error once");
-        tr.assertZero("Should still return 0");
+    public void testDumpDirIsFile() throws Exception {
+        Path testDir = Path.of("notDir");
+        Path dumpFile = testDir.resolve(DUMP_LAMBDA_PROXY_CLASS_FILES);
+        Files.createDirectory(testDir);
+        Files.createFile(dumpFile);
+        assertTrue(Files.isRegularFile(dumpFile));
+        ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
+                                "-cp", CLASSES.toString(),
+                                "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
+                                "com.example.TestLambda").directory(testDir.toFile());
+        executeProcess(pb)
+                .shouldContain("DUMP_LAMBDA_PROXY_CLASS_FILES is not a directory")
+                .shouldNotHaveExitValue(0);
     }
 
     private static boolean isWriteableDirectory(Path p) {
@@ -194,73 +201,68 @@ public class LogGeneratedClassesTest extends LUtils {
     }
 
     @Test
-    public void testDumpDirNotWritable() throws IOException {
-        if (!Files.getFileStore(Paths.get("."))
-                  .supportsFileAttributeView(PosixFileAttributeView.class)) {
-            // No easy way to setup readonly directory without POSIX
-            // We would like to skip the test with a cause with
-            //     throw new SkipException("Posix not supported");
-            // but jtreg will report failure so we just pass the test
-            // which we can look at if jtreg changed its behavior
-            System.out.println("WARNING: POSIX is not supported. Skipping testDumpDirNotWritable test.");
+    public void testDumpDirNotWritable() throws Exception {
+        FileStore fs;
+        try {
+            fs = Files.getFileStore(Paths.get("."));
+        } catch (IOException e) {
+            Assumptions.assumeTrue(false, "WARNING: IOException occurred: " + e + ", Skipping testDumpDirNotWritable test.");
             return;
         }
+        Assumptions.assumeFalse(!fs.supportsFileAttributeView(PosixFileAttributeView.class), "WARNING: POSIX is not supported. Skipping testDumpDirNotWritable test."); // No easy way to setup readonly directory without POSIX
 
-        Files.createDirectory(Paths.get("readOnly"),
+        Path testDir = Path.of("readOnly");
+        Path dumpDir = testDir.resolve(DUMP_LAMBDA_PROXY_CLASS_FILES);
+        Files.createDirectory(testDir);
+        Files.createDirectory(dumpDir,
                               asFileAttribute(fromString("r-xr-xr-x")));
         try {
-            if (isWriteableDirectory(Paths.get("readOnly"))) {
-                // Skipping the test: it's allowed to write into read-only directory
-                // (e.g. current user is super user).
-                System.out.println("WARNING: readOnly directory is writeable. Skipping testDumpDirNotWritable test.");
-                return;
-            }
+            Assumptions.assumeFalse(isWriteableDirectory(dumpDir), "WARNING: The dump directory is writeable. Skipping testDumpDirNotWritable test."); // Skipping the test: it's allowed to write into read-only directory
+            // (e.g. current user is super user).
 
-            TestResult tr = doExec(JAVA_CMD.getAbsolutePath(),
-                                   "-cp", ".",
-                                   "-Djava.security.manager=allow",
-                                   "-Djdk.internal.lambda.dumpProxyClasses=readOnly",
-                                   "com.example.TestLambda");
-            assertEquals(tr.testOutput.stream()
-                                      .filter(s -> s.startsWith("WARNING"))
-                                      .filter(s -> s.contains("not writable"))
-                                      .count(),
-                         1, "only show error once");
-            tr.assertZero("Should still return 0");
+            ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
+                                   "-cp", CLASSES.toString(),
+                                   "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
+                                   "com.example.TestLambda").directory(testDir.toFile());
+            executeProcess(pb)
+                    .shouldContain("DUMP_LAMBDA_PROXY_CLASS_FILES is not writable")
+                    .shouldNotHaveExitValue(0);
         } finally {
-            TestUtil.removeAll(Paths.get("readOnly"));
+            TestUtil.removeAll(testDir);
         }
     }
 
     @Test
-    public void testLoggingException() throws IOException {
-        assertTrue(Files.exists(Paths.get("dumpLong")));
-        TestResult tr = doExec(JAVA_CMD.getAbsolutePath(),
-                               "-cp", ".",
-                                "-Djava.security.manager=allow",
-                               "-Djdk.internal.lambda.dumpProxyClasses=dumpLong",
-                               longFQCN);
-        assertEquals(tr.testOutput.stream()
-                                  .filter(s -> s.startsWith("WARNING: Exception"))
-                                  .count(),
-                     2, "show error each capture");
-        // dumpLong/com/example/nonsense/nonsense
-        Path dumpPath = Paths.get("dumpLong/com/example/nonsense");
+    public void testLoggingException() throws Exception {
+        Path testDir = Path.of("dumpLong");
+        Path dumpDir = testDir.resolve(DUMP_LAMBDA_PROXY_CLASS_FILES);
+        Files.createDirectories(dumpDir.resolve("com/example/nonsense"));
+        Files.createFile(dumpDir.resolve("com/example/nonsense/nonsense"));
+        ProcessBuilder pb = createLimitedTestJavaProcessBuilder(
+                               "-cp", CLASSES.toString(),
+                               "-Djdk.invoke.LambdaMetafactory.dumpProxyClassFiles",
+                               longFQCN).directory(testDir.toFile());
+        OutputAnalyzer outputAnalyzer = executeProcess(pb);
+        outputAnalyzer.shouldHaveExitValue(0);
+        assertEquals(2, outputAnalyzer.asLines().stream()
+                .filter(s -> s.startsWith("WARNING: Exception"))
+                .count(), "show error each capture");
+        // dumpLong/DUMP_LAMBDA_PROXY_CLASS_FILES/com/example/nonsense/nonsense
+        Path dumpPath = dumpDir.resolve("com/example/nonsense");
         Predicate<Path> filter = p -> p.getParent() == null || dumpPath.startsWith(p) || p.startsWith(dumpPath);
         boolean debug = true;
         if (debug) {
-           Files.walk(Paths.get("dumpLong"))
+           Files.walk(dumpDir)
                 .forEachOrdered(p -> {
                     if (filter.test(p)) {
                         System.out.println("accepted: " + p.toString());
                     } else {
-                        System.out.println("filetered out: " + p.toString());
+                        System.out.println("filtered out: " + p.toString());
                     }
                  });
         }
-        assertEquals(Files.walk(Paths.get("dumpLong"))
+        assertEquals(5, Files.walk(dumpDir)
                 .filter(filter)
-                .count(), 5, "Two lambda captured failed to log");
-        tr.assertZero("Should still return 0");
+                .count(), "Two lambda captured failed to log");
     }
 }
