@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -47,6 +47,8 @@ import java.net.StandardSocketOptions;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.http.HttpOption.Http3DiscoveryMode;
+import java.net.http.UnsupportedProtocolVersionException;
 import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
@@ -67,8 +69,14 @@ import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.net.ssl.SSLContext;
+import javax.net.ssl.SSLParameters;
+
+import jdk.httpclient.test.lib.common.HttpServerAdapters.AbstractHttpAuthFilter.HttpAuthMode;
+import jdk.httpclient.test.lib.common.TestServerConfigurator;
 import sun.net.www.HeaderParser;
 import java.net.http.HttpClient.Version;
+import jdk.httpclient.test.lib.common.HttpServerAdapters;
+import jdk.httpclient.test.lib.http2.Http2TestServer;
 
 /**
  * A simple HTTP server that supports Basic or Digest authentication.
@@ -86,8 +94,14 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
     public static final boolean TUNNEL_REQUIRES_HOST =
             Boolean.parseBoolean(System.getProperty("test.requiresHost", "false"));
     public enum HttpAuthType {
-        SERVER, PROXY, SERVER307, PROXY305
+        SERVER, PROXY, SERVER307, PROXY305;
         /* add PROXY_AND_SERVER and SERVER_PROXY_NONE */
+        public HttpAuthMode authMode() {
+            return switch (this) {
+                case SERVER, SERVER307 -> HttpAuthMode.SERVER;
+                case PROXY, PROXY305 -> HttpAuthMode.PROXY;
+            };
+        }
     };
     public enum HttpAuthSchemeType { NONE, BASICSERVER, BASIC, DIGEST };
     public static final HttpAuthType DEFAULT_HTTP_AUTH_TYPE = HttpAuthType.SERVER;
@@ -149,13 +163,19 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
     final String               key;
 
     DigestEchoServer(String key,
-                             HttpTestServer server,
-                             DigestEchoServer target,
-                             HttpTestHandler delegate) {
+                     HttpTestServer server,
+                     DigestEchoServer target,
+                     HttpTestHandler delegate) {
         this.key = key;
         this.serverImpl = server;
         this.redirect = target;
         this.delegate = delegate;
+    }
+
+    public Version version() {
+        if (serverImpl.canHandle(Version.HTTP_3))
+            return Version.HTTP_3;
+        return serverImpl.getVersion();
     }
 
     public static void main(String[] args)
@@ -174,6 +194,17 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
             System.out.println("stopping server");
             server.stop();
         }
+    }
+
+    public Http3DiscoveryMode serverConfig() {
+        // If the client request is HTTP_3, but the server
+        // doesn't support HTTP/3, we don't want the client
+        // to attempt a direct HTTP/3 connection - so use
+        // ALT_SVC to prevent that
+        var config = serverImpl.h3DiscoveryConfig();
+        return config == null
+                ? Http3DiscoveryMode.ALT_SVC
+                : config;
     }
 
     private static String toString(HttpTestRequestHeaders headers) {
@@ -239,6 +270,13 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
         }
     }
 
+    private static String authority(InetSocketAddress address) {
+        String addressStr = address.getAddress().getHostAddress();
+        if (addressStr.indexOf(':') >= 0) {
+            addressStr = "[" + addressStr + "]";
+        }
+        return addressStr + ":" + address.getPort();
+    }
 
     /**
      * The SocketBindableFactory ensures that the local port used by an HttpServer
@@ -257,7 +295,8 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
                 for (int i = 1; i <= max; i++) {
                     B bindable = createBindable();
                     InetSocketAddress address = getAddress(bindable);
-                    String key = "localhost:" + address.getPort();
+
+                    String key = authority(address);
                     if (addresses.addIfAbsent(key)) {
                         System.out.println("Socket bound to: " + key
                                 + " after " + i + " attempt(s)");
@@ -451,6 +490,15 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
                 return HttpTestServer.of(createHttp1Server(protocol));
             case HTTP_2:
                 return HttpTestServer.of(createHttp2Server(protocol));
+            case HTTP_3:
+                try {
+                    if (!"https".equalsIgnoreCase(protocol)) {
+                        throw new UnsupportedProtocolVersionException("HTTP/3 requires https");
+                    }
+                    return HttpTestServer.create(Version.HTTP_3, SSLContext.getDefault());
+                } catch (NoSuchAlgorithmException e) {
+                    throw new IOException(e);
+                }
             default:
                 throw new InternalError("Unexpected version: " + version);
         }
@@ -471,26 +519,28 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
     static HttpsServer configure(HttpsServer server) throws IOException {
         try {
             SSLContext ctx = SSLContext.getDefault();
-            server.setHttpsConfigurator(new Configurator(ctx));
+            server.setHttpsConfigurator(new Configurator(server.getAddress().getAddress(), ctx));
         } catch (NoSuchAlgorithmException ex) {
             throw new IOException(ex);
         }
         return server;
     }
 
+    static BasicAuthenticator toBasicAuthenticator(HttpTestAuthenticator auth) {
+        final String realm = auth.getRealm();
+        return new BasicAuthenticator(realm) {
+            @Override
+            public boolean checkCredentials(String username, String pwd) {
+                return auth.getUserName().equals(username)
+                        && new String(auth.getPassword(username)).equals(pwd);
+            }
+        };
+    }
 
     static void setContextAuthenticator(HttpTestContext ctxt,
                                         HttpTestAuthenticator auth) {
-        final String realm = auth.getRealm();
-        com.sun.net.httpserver.Authenticator authenticator =
-            new BasicAuthenticator(realm) {
-                @Override
-                public boolean checkCredentials(String username, String pwd) {
-                    return auth.getUserName().equals(username)
-                           && new String(auth.getPassword(username)).equals(pwd);
-                }
-        };
-        ctxt.setAuthenticator(authenticator);
+
+        ctxt.setAuthenticator(toBasicAuthenticator(auth));
     }
 
     public static DigestEchoServer createServer(Version version,
@@ -504,6 +554,16 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
         Objects.requireNonNull(authType);
         Objects.requireNonNull(auth);
 
+        if (version == Version.HTTP_3) {
+            if (!"https".equalsIgnoreCase(protocol)) {
+                throw new UnsupportedProtocolVersionException("HTTP/3 requires TLS");
+            }
+            switch (authType) {
+                case PROXY, PROXY305 ->
+                        throw new UnsupportedProtocolVersionException("proxying not supported for HTTP/3");
+                case SERVER, SERVER307 -> {}
+            }
+        }
         HttpTestServer impl = createHttpServer(version, protocol);
         String key = String.format("DigestEchoServer[PID=%s,PORT=%s]:%s:%s:%s:%s",
                 ProcessHandle.current().pid(),
@@ -532,6 +592,10 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
         if (version == Version.HTTP_2 && protocol.equalsIgnoreCase("http")) {
             System.out.println("WARNING: can't use HTTP/1.1 proxy with unsecure HTTP/2 server");
             version = Version.HTTP_1_1;
+        }
+        if (version == Version.HTTP_3) {
+            System.out.println("WARNING: can't use HTTP/1.1 proxy with HTTP/3 server");
+            version = Version.HTTP_2;
         }
         HttpTestServer impl = createHttpServer(version, protocol);
         String key = String.format("DigestEchoServer[PID=%s,PORT=%s]:%s:%s:%s:%s",
@@ -657,7 +721,7 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
                                  HttpAuthType authType) {
         switch(schemeType) {
             case DIGEST:
-                // DIGEST authentication is handled by the handler.
+                // DIGEST authentication is handled by the filter.
                 ctxt.addFilter(new HttpDigestFilter(key, auth, authType));
                 break;
             case BASIC:
@@ -687,6 +751,7 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
                         throw new InternalError(key + ": Invalid combination scheme="
                              + schemeType + " authType=" + authType);
                 }
+                break;
             case NONE:
                 // No authentication at all.
                 ctxt.addFilter(new HttpNoAuthFilter(key, authType));
@@ -703,85 +768,6 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
         return new Http3xxHandler(key, proxyURL, type, code300);
     }
 
-    // Abstract HTTP filter class.
-    private abstract static class AbstractHttpFilter extends HttpTestFilter {
-
-        final HttpAuthType authType;
-        final String type;
-        public AbstractHttpFilter(HttpAuthType authType, String type) {
-            this.authType = authType;
-            this.type = type;
-        }
-
-        String getLocation() {
-            return "Location";
-        }
-        String getAuthenticate() {
-            return authType == HttpAuthType.PROXY
-                    ? "Proxy-Authenticate" : "WWW-Authenticate";
-        }
-        String getAuthorization() {
-            return authType == HttpAuthType.PROXY
-                    ? "Proxy-Authorization" : "Authorization";
-        }
-        int getUnauthorizedCode() {
-            return authType == HttpAuthType.PROXY
-                    ? HttpURLConnection.HTTP_PROXY_AUTH
-                    : HttpURLConnection.HTTP_UNAUTHORIZED;
-        }
-        String getKeepAlive() {
-            return "keep-alive";
-        }
-        String getConnection() {
-            return authType == HttpAuthType.PROXY
-                    ? "Proxy-Connection" : "Connection";
-        }
-        protected abstract boolean isAuthentified(HttpTestExchange he) throws IOException;
-        protected abstract void requestAuthentication(HttpTestExchange he) throws IOException;
-        protected void accept(HttpTestExchange he, HttpChain chain) throws IOException {
-            chain.doFilter(he);
-        }
-
-        @Override
-        public String description() {
-            return "Filter for " + type;
-        }
-        @Override
-        public void doFilter(HttpTestExchange he, HttpChain chain) throws IOException {
-            try {
-                System.out.println(type + ": Got " + he.getRequestMethod()
-                    + ": " + he.getRequestURI()
-                    + "\n" + DigestEchoServer.toString(he.getRequestHeaders()));
-
-                // Assert only a single value for Expect. Not directly related
-                // to digest authentication, but verifies good client behaviour.
-                List<String> expectValues = he.getRequestHeaders().get("Expect");
-                if (expectValues != null && expectValues.size() > 1) {
-                    throw new IOException("Expect:  " + expectValues);
-                }
-
-                if (!isAuthentified(he)) {
-                    try {
-                        requestAuthentication(he);
-                        he.sendResponseHeaders(getUnauthorizedCode(), -1);
-                        System.out.println(type
-                            + ": Sent back " + getUnauthorizedCode());
-                    } finally {
-                        he.close();
-                    }
-                } else {
-                    accept(he, chain);
-                }
-            } catch (RuntimeException | Error | IOException t) {
-               System.err.println(type
-                    + ": Unexpected exception while handling request: " + t);
-               t.printStackTrace(System.err);
-               he.close();
-               throw t;
-            }
-        }
-
-    }
 
     // WARNING: This is not a full fledged implementation of DIGEST.
     // It does contain bugs and inaccuracy.
@@ -916,16 +902,16 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
 
     }
 
-    private static class HttpNoAuthFilter extends AbstractHttpFilter {
+    private static class HttpNoAuthFilter extends AbstractHttpAuthFilter {
 
         static String type(String key, HttpAuthType authType) {
-            String type = authType == HttpAuthType.SERVER
+            String type = authType.authMode() == HttpAuthMode.SERVER
                     ? "NoAuth Server Filter" : "NoAuth Proxy Filter";
             return "["+type+"]:"+key;
         }
 
         public HttpNoAuthFilter(String key, HttpAuthType authType) {
-            super(authType, type(key, authType));
+            super(authType.authMode(), type(key, authType));
         }
 
         @Override
@@ -946,73 +932,22 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
     }
 
     // An HTTP Filter that performs Basic authentication
-    private static class HttpBasicFilter extends AbstractHttpFilter {
+    private static class HttpBasicFilter extends HttpBasicAuthFilter {
 
         static String type(String key, HttpAuthType authType) {
-            String type = authType == HttpAuthType.SERVER
+            String type = authType.authMode() == HttpAuthMode.SERVER
                     ? "Basic Server Filter" : "Basic Proxy Filter";
             return "["+type+"]:"+key;
         }
 
-        private final HttpTestAuthenticator auth;
         public HttpBasicFilter(String key, HttpTestAuthenticator auth,
                                HttpAuthType authType) {
-            super(authType, type(key, authType));
-            this.auth = auth;
-        }
-
-        @Override
-        protected void requestAuthentication(HttpTestExchange he)
-            throws IOException
-        {
-            String headerName = getAuthenticate();
-            String headerValue = "Basic realm=\"" + auth.getRealm() + "\"";
-            he.getResponseHeaders().addHeader(headerName, headerValue);
-            System.out.println(type + ": Requesting Basic Authentication, "
-                               + headerName + " : "+ headerValue);
-        }
-
-        @Override
-        protected boolean isAuthentified(HttpTestExchange he) {
-            if (he.getRequestHeaders().containsKey(getAuthorization())) {
-                List<String> authorization =
-                    he.getRequestHeaders().get(getAuthorization());
-                for (String a : authorization) {
-                    System.out.println(type + ": processing " + a);
-                    int sp = a.indexOf(' ');
-                    if (sp < 0) return false;
-                    String scheme = a.substring(0, sp);
-                    if (!"Basic".equalsIgnoreCase(scheme)) {
-                        System.out.println(type + ": Unsupported scheme '"
-                                           + scheme +"'");
-                        return false;
-                    }
-                    if (a.length() <= sp+1) {
-                        System.out.println(type + ": value too short for '"
-                                            + scheme +"'");
-                        return false;
-                    }
-                    a = a.substring(sp+1);
-                    return validate(a);
-                }
-                return false;
-            }
-            return false;
-        }
-
-        boolean validate(String a) {
-            byte[] b = Base64.getDecoder().decode(a);
-            String userpass = new String (b);
-            int colon = userpass.indexOf (':');
-            String uname = userpass.substring (0, colon);
-            String pass = userpass.substring (colon+1);
-            return auth.getUserName().equals(uname) &&
-                   new String(auth.getPassword(uname)).equals(pass);
+            super(toBasicAuthenticator(auth), authType.authMode(), type(key, authType));
         }
 
         @Override
         public String description() {
-            return "Filter for BASIC authentication: " + type;
+            return "Filter for BASIC authentication: " + type();
         }
 
     }
@@ -1021,10 +956,10 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
     // An HTTP Filter that performs Digest authentication
     // WARNING: This is not a full fledged implementation of DIGEST.
     // It does contain bugs and inaccuracy.
-    private static class HttpDigestFilter extends AbstractHttpFilter {
+    private static class HttpDigestFilter extends AbstractHttpAuthFilter {
 
         static String type(String key, HttpAuthType authType) {
-            String type = authType == HttpAuthType.SERVER
+            String type = authType.authMode() == HttpAuthMode.SERVER
                     ? "Digest Server Filter" : "Digest Proxy Filter";
             return "["+type+"]:"+key;
         }
@@ -1036,26 +971,24 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
         private final HttpTestAuthenticator auth;
         private final byte[] nonce;
         private final String ns;
+        private final String type;
         public HttpDigestFilter(String key, HttpTestAuthenticator auth, HttpAuthType authType) {
-            super(authType, type(key, authType));
+            super(authType.authMode(), type(key, authType));
             this.auth = auth;
             nonce = new byte[16];
             new Random(Instant.now().toEpochMilli()).nextBytes(nonce);
             ns = new BigInteger(1, nonce).toString(16);
+            this.type = type();
         }
 
         @Override
         protected void requestAuthentication(HttpTestExchange he)
                 throws IOException {
-            String separator;
             Version v = he.getExchangeVersion();
-            if (v == Version.HTTP_1_1) {
-                separator = "\r\n    ";
-            } else if (v == Version.HTTP_2) {
-                separator = " ";
-            } else {
-                throw new InternalError(String.valueOf(v));
-            }
+            String separator = switch (v) {
+                case HTTP_1_1 -> "\r\n    ";
+                case HTTP_2, HTTP_3 -> " ";
+            };
             String headerName = getAuthenticate();
             String headerValue = "Digest realm=\"" + auth.getRealm() + "\","
                     + separator + "qop=\"auth\","
@@ -1251,13 +1184,18 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
     }
 
     static class Configurator extends HttpsConfigurator {
-        public Configurator(SSLContext ctx) {
+        private final InetAddress serverAddr;
+
+        public Configurator(InetAddress serverAddr, SSLContext ctx) {
             super(ctx);
+            this.serverAddr = serverAddr;
         }
 
         @Override
         public void configure (HttpsParameters params) {
-            params.setSSLParameters (getSSLContext().getSupportedSSLParameters());
+            final SSLParameters parameters = getSSLContext().getSupportedSSLParameters();
+            TestServerConfigurator.addSNIMatcher(this.serverAddr, parameters);
+            params.setSSLParameters(parameters);
         }
     }
 
@@ -1558,18 +1496,19 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
                 @Override
                 public void run() {
                     try {
-                        int c = 0;
+                        int len = 0;
+                        byte[] buf = new byte[16 * 1024];
                         try {
-                            while ((c = is.read()) != -1) {
-                                os.write(c);
+                            while ((len = is.read(buf)) != -1) {
+                                os.write(buf, 0, len);
                                 os.flush();
                                 // if DEBUG prints a + or a - for each transferred
                                 // character.
-                                if (DEBUG) System.out.print(tag);
+                                if (DEBUG) System.out.print(String.valueOf(tag).repeat(len));
                             }
                             is.close();
                         } catch (IOException ex) {
-                            if (DEBUG || !stopped && c >  -1)
+                            if (DEBUG || !stopped && len > -1)
                                 ex.printStackTrace(System.out);
                             end.completeExceptionally(ex);
                         } finally {
@@ -1667,8 +1606,8 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
                             port = port == -1 ? 443 : port;
                             targetAddress = new InetSocketAddress(uri.getHost(), port);
                             if (serverImpl != null) {
-                                assert targetAddress.getHostString()
-                                        .equalsIgnoreCase(serverImpl.getAddress().getHostString());
+                                assert targetAddress.getAddress().getHostAddress()
+                                        .equalsIgnoreCase(serverImpl.getAddress().getAddress().getHostAddress());
                                 assert targetAddress.getPort() == serverImpl.getAddress().getPort();
                             }
                         } catch (Throwable x) {
@@ -1830,15 +1769,16 @@ public abstract class DigestEchoServer implements HttpServerAdapters {
 
     public static URL url(String protocol, InetSocketAddress address,
                           String path) throws MalformedURLException {
-        return new URL(protocol(protocol),
-                address.getHostString(),
-                address.getPort(), path);
+        try {
+            return uri(protocol, address, path).toURL();
+        } catch (URISyntaxException e) {
+           throw new MalformedURLException(e.getMessage());
+        }
     }
 
     public static URI uri(String protocol, InetSocketAddress address,
                           String path) throws URISyntaxException {
         return new URI(protocol(protocol) + "://" +
-                address.getHostString() + ":" +
-                address.getPort() + path);
+                authority(address) + path);
     }
 }
