@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,13 +22,16 @@
  */
 package org.openjdk.bench.javax.crypto.full;
 
+import org.openjdk.jmh.annotations.Fork;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.Param;
 import org.openjdk.jmh.annotations.Setup;
 
+import java.security.GeneralSecurityException;
 import java.security.KeyPair;
 import java.security.KeyPairGenerator;
 import java.security.NoSuchAlgorithmException;
+import java.security.Provider;
 
 public class KeyPairGeneratorBench extends CryptoBase {
 
@@ -43,8 +46,21 @@ public class KeyPairGeneratorBench extends CryptoBase {
     @Setup
     public void setup() throws NoSuchAlgorithmException {
         setupProvider();
-        generator = (prov == null) ? KeyPairGenerator.getInstance(algorithm) : KeyPairGenerator.getInstance(algorithm, prov);
-        generator.initialize(keyLength);
+        generator = (prov == null) ? KeyPairGenerator.getInstance(algorithm)
+                                : KeyPairGenerator.getInstance(algorithm, prov);
+        // not all key pair generators allow the use of key length
+        if (keyLength > 0) {
+            generator.initialize(keyLength);
+        }
+    }
+
+    private static Provider getInternalJce() {
+        try {
+            Class<?> dhClazz = Class.forName("sun.security.ssl.HybridProvider");
+            return (Provider) dhClazz.getField("PROVIDER").get(null);
+        } catch (ReflectiveOperationException exc) {
+            throw new RuntimeException(exc);
+        }
     }
 
     @Benchmark
@@ -57,9 +73,17 @@ public class KeyPairGeneratorBench extends CryptoBase {
         @Param({"RSA"})
         private String algorithm;
 
-        @Param({"1024", "2048", "3072"})
+        @Param({"1024", "2048", "3072", "4096"})
         private int keyLength;
+    }
 
+    public static class RSASSAPSS extends KeyPairGeneratorBench {
+
+        @Param({"RSASSA-PSS"})
+        private String algorithm;
+
+        @Param({"1024", "2048", "3072", "4096"})
+        private int keyLength;
     }
 
     public static class EC extends KeyPairGeneratorBench {
@@ -69,7 +93,61 @@ public class KeyPairGeneratorBench extends CryptoBase {
 
         @Param({"256", "384", "521"})
         private int keyLength;
-
     }
 
+    public static class EdDSA extends KeyPairGeneratorBench {
+
+        @Param({"EdDSA"})
+        private String algorithm;
+
+        @Param({"255", "448"})
+        private int keyLength;
+    }
+
+    public static class XDH extends KeyPairGeneratorBench {
+
+        @Param({"XDH"})
+        private String algorithm;
+
+        @Param({"255", "448"})
+        private int keyLength;
+    }
+
+    public static class MLDSA extends KeyPairGeneratorBench {
+
+        @Param({"ML-DSA-44", "ML-DSA-65", "ML-DSA-87" })
+        private String algorithm;
+
+        @Param({"0"}) // ML-DSA key length is not supported
+        private int keyLength;
+    }
+
+    public static class MLKEM extends KeyPairGeneratorBench {
+
+        @Param({"ML-KEM-512", "ML-KEM-768", "ML-KEM-1024" })
+        private String algorithm;
+
+        @Param({"0"}) // ML-KEM key length is not supported
+        private int keyLength;
+    }
+
+    @Fork(value = 5, jvmArgs = {"-XX:+AlwaysPreTouch", "--add-opens",
+            "java.base/sun.security.ssl=ALL-UNNAMED"})
+    public static class JSSE_Hybrid extends KeyPairGeneratorBench {
+        @Setup
+        public void init() {
+            try {
+                prov = getInternalJce();
+                super.setup();
+            } catch (GeneralSecurityException gse) {
+                throw new RuntimeException(gse);
+            }
+        }
+
+        @Param({"X25519MLKEM768", "SecP256r1MLKEM768", "SecP384r1MLKEM1024"})
+        private String algorithm;
+
+        @Param({"0"})       // Hybrid KPGs don't need key lengths
+        private int keyLength;
+    }
 }
